# zhiweidoushu

./: README.md  astro_chart.py  chunking.ipynb  documents-with-ids.json  evaluation.ipynb  ground-truth-data.csv  main.py  polish html file.ipynb  pyproject.toml  qdrant test.ipynb  qdrant test2.ipynb  qdrant_workflow.ipynb  test.ipynb  zhiwei book.html  zhiweidoushu -101 book.txt  ziweidoushu book.html  ziweidoushu book2.html
qdrant_storage/: raft_state.json
store_location/: 0006a188-ce9e-4aea-b645-8ce30ef6c285  0155b59d-8bce-49c4-86a1-c00e69c69e78  01c0ae8e-2ee1-4cce-99d6-b03cb1112396  01ff2707-87fe-4c9a-8db9-1ab0bff1c693  020e71b6-1ae8-4d9a-8ee3-9b5c9eddf9fb  0342730d-65ef-402e-973b-f4737fef466f  044235c9-762f-4132-a5c4-d14c5c062b6e  048be637-bb5d-4ecb-a494-b5767fc77227  04afd1bf-1289-4cea-ba5a-09f19b72564c  053c6889-14f2-4358-9e51-d8fb623d9b85  05d32b82-e9a1-407c-91f1-eee1b6882ce7  08a67940-d527-4e15-b1ff-93d0eacbfaea  099e1b05-1e1b-47d5-8fe3-568d058e3096  09bfd8fe-35db-4f14-8756-8c9be7b5b9e8  0a05e4e2-3747-4f2d-b7c3-9f228f630fd5  0a20bdf4-1c09-4c9c-bb9f-366deb5cf624  0a4ae6e8-59b0-4571-bc51-3ec6d82b5e5b  0abd2d24-cfdd-4aae-9d27-7e789a06e824  0aff9937-c307-4049-9863-eb584d09ea3a  0b418d89-115e-448c-b9ac-b8c34f64d939  0bc568e9-2357-4b1e-ad7b-967827d47469  0c4e094d-ac69-4d42-ae2a-a291a452a82d  0cd98963-e8a8-49fd-84d6-7ee7c9a3afcc  0d4fee5e-d34d-4973-bbe1-276c3d7b781a  0dc82de9-ebfd-41b8-b997-5b03f273fb4f  0dcb77d4-5cde-4d92-9473-30916859d842  0e78cb31-807e-4d65-94a1-e6a019cc9116  0e8dcd10-fdab-436c-9358-26f7103230b7  0f238e7b-b8db-48b2-95fd-32d0f039a319  (+470 more)
(+132 files in other folders)
