[project]
name = "zhiweidoushu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "flashrank>=0.2.10",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-qdrant>=0.2.1",
    "lxml>=6.0.1",
    "py-iztro>=0.1.5",
    "qdrant-client[fastembed]>=1.15.1",
    "rank-llm>=0.21.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
